Somehow fixed the alignment issues

--- a/frontend/src/styles/AIPage.module.css
+++ b/frontend/src/styles/AIPage.module.css
@@ -1,7 +1,12 @@
 .AI_page {
     display: flex;
     flex-direction: column;
-    height: 90%;
+    height: calc(100vh - 120px);
+    overflow: hidden;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .content {
@@ -12,6 +17,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
+    padding-top: 0;
 }
 
 .input {
