--- a/frontend/src/styles/mainPage.module.css
+++ b/frontend/src/styles/mainPage.module.css
@@ -14,6 +14,10 @@ body {
     color: #A5668B;
 }
 
+.page {
+    min-height: 100vh;
+}
+
 .main_page {
     display: flex;
     flex-direction: row;
