--- a/frontend/src/styles/side-bar.module.css
+++ b/frontend/src/styles/side-bar.module.css
@@ -9,10 +9,13 @@
     color: #022B3A;
     width: 250px;
     flex-shrink: 0;
-    min-height: 100vh;
+    min-height: calc(100vh - 90px);
     padding: 20px;
+    padding-bottom: 0;
+    margin-bottom: 0;
     box-sizing: border-box;
     margin: 0;
+    overflow: hidden;
 }
 
 .SideBar h2 {
